# aifa

./: .env.example  Aifa_rfq_chatbot_flow.ipynb  README.md  pyproject.toml  untitled.ipynb
.github/workflows/: codeql.yml
aifa/: __init__.py  agent.py  prompt.py
aifa/sub_agents/: __init__.py
aifa/sub_agents/document_processor/: __init__.py  agent.py  prompt.py
aifa/sub_agents/policy_advisor/: __init__.py  agent.py  prompt.py
aifa/sub_agents/rfq_analyzer/: __init__.py  agent.py  prompt.py
aifa/tools/: __init__.py  data_cleaner.py  pdf_extractor.py
