[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aswaadvisory-aifa"
version = "0.1.0"
description = "AIFA — AI Financial Adviser for ASWA Advisory Sdn Bhd (Google ADK)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "google-adk>=0.3.0",
    "PyPDF2>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aifa*"]
